--- a/index.html
+++ b/index.html
@@ -31,12 +31,33 @@
     </ul>
     <hr />
     <h2>Skills</h2>
-    <hr>
+    <ul>
+      <li>
+        Java:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;⭐️⭐️⭐️⭐️
+      </li>
+      <li>Spring Boot:&nbsp;&nbsp;&nbsp;⭐️⭐️⭐️</li>
+      <li>
+        HTML :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;⭐️⭐️⭐️⭐️
+      </li>
+      <li>
+        Git:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;⭐️⭐️⭐️⭐️
+      </li>
+    </ul>
+    <hr />
     <h2>Certificates</h2>
-    <hr>
+    <ul>
+      <li>Generative AI - Capgemini(2023)</li>
+      <li>Crud Operations using Mongo DB NoSQL - Coursera(2024)</li>
+      <li>Agile Software Devlopment - Coursera(2024)</li>
+    </ul>
+    <hr />
     <h2>Others</h2>
+    <ul>
+      <li><a href="./public/hobbies.html">My Hobbies</a></li>
+      <li><a href="./public/contact.html">Contact Me</a></li>
+    </ul>
     <footer>
-        <p>&copy Aareddy Gnaneshwar. All rigths reserved.</p>
+      <p>&copy Aareddy Gnaneshwar. All rigths reserved.</p>
     </footer>
   </body>
 </html>
